aks/tripinsights.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poi
  namespace: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: poi
  template:
    metadata:
      labels:
        app: poi
    spec:
      nodeSelector:
        "kubernetes.io/os": linux
      containers:
      - name: poi
        image: registrymjo6478.azurecr.io/tripinsights/poi:latest  
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: poi
  namespace: api
spec:
  ports:
  - port: 8080
    targetPort: 80
  selector:
    app: poi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trips
  namespace: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trips
  template:
    metadata:
      labels:
        app: trips
    spec:
      nodeSelector:
        "kubernetes.io/os": linux
      containers:
      - name: trips
        image: registrymjo6478.azurecr.io/tripinsights/trips:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: trips
  namespace: api
spec:
  ports:
  - port: 8081
    targetPort: 80
  selector:
    app: trips
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-java
  namespace: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-java
  template:
    metadata:
      labels:
        app: user-java
    spec:
      nodeSelector:
        "kubernetes.io/os": linux
      containers:
      - name: user-java
        image: registrymjo6478.azurecr.io/tripinsights/user-java:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: user-java
  namespace: api
spec:
  ports:
  - port: 8082
    targetPort: 80
  selector:
    app: user-java
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userprofile
  namespace: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: userprofile
  template:
    metadata:
      labels:
        app: userprofile
    spec:
      nodeSelector:
        "kubernetes.io/os": linux
      containers:
      - name: userprofile
        image: registrymjo6478.azurecr.io/tripinsights/userprofile:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: userprofile
  namespace: api
spec:
  ports:
  - port: 8083
    targetPort: 80
  selector:
    app: userprofile
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tripviewer
  namespace: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tripviewer
  template:
    metadata:
      labels:
        app: tripviewer
    spec:
      nodeSelector:
        "kubernetes.io/os": linux
      containers:
      - name: tripviewer
        image: registrymjo6478.azurecr.io/tripinsights/tripviewer:latest 
        ports:
        - containerPort: 80       
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: tripviewer
  namespace: web
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: tripviewer
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tripviewer
  namespace: web
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  defaultBackend:
    service:
      name: tripviewer
      port:
        number: 80
  rules:
  - host: tripviewer.1f0c34bc52b146e3a617.westcentralus.aksapp.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: tripviewer
            port: 
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tripviewer
  namespace: api
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
  - host: tripviewer.1f0c34bc52b146e3a617.westcentralus.aksapp.io
    http:
      paths:
      - path: /api/poi
        pathType: Prefix
        backend:          
          service: 
            name: poi
            port: 
              number: 8080
      - path: /api/trips
        pathType: Prefix
        backend:          
          service: 
            name: trips
            port: 
              number: 8081
      - path: /api/user-java
        pathType: Prefix
        backend:          
          service: 
            name: user-java
            port: 
              number: 8082
      - path: /api/user
        pathType: Prefix
        backend:          
          service: 
            name: userprofile
            port: 
              number: 8083
